<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/textintro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_regular"
            android:text="@string/intro_text"
            android:textSize="@dimen/text_heading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.068"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.061" />

        <TextView
            android:id="@+id/choose_dessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textintro"
            android:layout_marginTop="16dp"
            android:padding="@dimen/padding_regular"
            android:text="@string/choose_a_dessert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textintro" />

        <ImageView
            android:id="@+id/donut"
            android:layout_width="180dp"
            android:layout_height="209dp"
            android:layout_below="@id/choose_dessert"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/donuts"
            android:padding="@dimen/padding_regular"
            android:src="@drawable/donut_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.138"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_dessert"
            app:layout_constraintVertical_bias="0.0"
            android:onClick="showDonutOrder" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="172dp"
            android:layout_height="135dp"
            android:layout_below="@+id/choose_dessert"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="29dp"
            android:layout_toRightOf="@id/donut"
            android:padding="@dimen/padding_wide"
            android:text="@string/donuts"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/donut"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.292" />

        <ImageView
            android:id="@+id/ice_cream"
            android:layout_width="180dp"
            android:layout_height="209dp"
            android:layout_below="@id/donut"
            android:layout_marginTop="228dp"
            android:contentDescription="@string/ice_cream_sandwiches"
            android:padding="@dimen/padding_regular"
            android:src="@drawable/icecream_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.129"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_dessert"
            app:layout_constraintVertical_bias="0.0"
            android:onClick="showIceCreamOrder" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="172dp"
            android:layout_height="135dp"
            android:layout_below="@+id/donut"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="29dp"
            android:layout_toRightOf="@id/ice_cream"
            android:padding="@dimen/padding_wide"

            android:text="@string/ice_cream_sandwiches"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/donut"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.618" />

        <ImageView
            android:id="@+id/froyo"
            android:layout_width="180dp"
            android:layout_height="209dp"
            android:layout_below="@id/ice_cream"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/froyo"
            android:padding="@dimen/padding_regular"
            android:src="@drawable/froyo_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.129"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ice_cream"
            android:onClick="showFroyoOrder" />

        <TextView
            android:layout_width="172dp"
            android:layout_height="135dp"
            android:layout_below="@+id/ice_cream"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="44dp"
            android:layout_toRightOf="@id/froyo"

            android:padding="@dimen/padding_wide"
            android:text="@string/froyo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/froyo"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>